# ChangeLog for dev-ruby/request_store
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 May 2014; Hans de Graaff <graaff@gentoo.org> request_store-1.0.5.ebuild:
  Add ruby20, ruby21.

*request_store-1.0.5 (28 Jun 2013)

  28 Jun 2013; Hans de Graaff <graaff@gentoo.org> +request_store-1.0.5.ebuild,
  +metadata.xml:
  Initial import. New dependency for draper.
