@@ -1,1 +1,2 @@
 DIST request_store-1.0.5.gem 6656 SHA256 70adb9485eb22113bd165e259b929a449dfe2d2410a880566f06df6a164fc1cf SHA512 0d69ebdb8d3f6df11f89780c250b5fcc702258e19d7fbf8e2273614ecc220ee25e059a596a8a7e39bcc426f8d834cab38c161c0c1a800cc7ebdba3daa810e727 WHIRLPOOL e3dc2ff0d349019aff440a371f6444e7703dc3481636a6e3e9d09b9cfbd153d6a887bae94d3b07a9fc67fadc4acc79e5848cdb5cdc8e3c30d224b524e47361c7
+DIST request_store-1.0.6.gem 8192 SHA256 c451105f0b737bad8aa9c42705b3ca73d8ab1cae14d4c2b4f86584ba6f59d8bf SHA512 4d121071ed69d5ca477e71201a7f92cb39309fad4c5234ebdbb8316122358de1801e97ea30fb92e548f815c822d7d95823d8b824ae8e84fcc8f4edf4178f2f48 WHIRLPOOL 3441cd5476efbfe08c94aaa73e97e8738cee9ffac2ffb770fc53355e1095bf6780940d78bb622a750845868f4f18d71aeceaab277a353434f86ae60c07f7dd96
