@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*request_store-1.0.6 (13 Jun 2014)
+
+  13 Jun 2014; Hans de Graaff <graaff@gentoo.org> +request_store-1.0.6.ebuild:
+  Version bump.
+
   01 May 2014; Hans de Graaff <graaff@gentoo.org> request_store-1.0.5.ebuild:
   Add ruby20, ruby21.
 
